--- a/index.html
+++ b/index.html
@@ -5,36 +5,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Макет</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
 <header class="header">
   
-  <button class="header__menu"><a  href="#"></a></button>
-  <div class="header__border first"></div>
-  <a class="header__logo" href="#"><div><img src="img/logo.svg" alt="Логотип"></div></a>
-  <button class="header__call"> <a  href="#"></a></button>
-  <button class="header__chat"><a  href="#"></a></button>
-  <button class="header__profile"> <a  href="#"></a></button>
-  <div class="header__border"></div>
-  <button class="header__help"> <a href="#"></a></button>
-  <button class="header__serch"> <a  href="#"></a></button>
+  <button class="menu" onclick="location.href='#'"></button>
+  <div class="border first"></div>
+  <a class="logo" href="#"><div><img src="img/logo.svg" alt="Логотип"></div></a>
+  <button class="call" onclick="location.href='#'"></button>
+  <button class="chat" onclick="location.href='#'"></button>
+  <button class="profile" onclick="location.href='#'"></button>
+  <div class="border"></div>
+  <button class="help" onclick="location.href='#'"></button>
+  <button class="serch" onclick="location.href='#'"></button>
   
 </header>
 <main class="main">
   <div class="main__mg">
-    <h1 class="main__mg__title">Услуги сервиса</h1>
-    <a class="main__mg__help" href="#">Оставить заявку</a>
-    <a class="main__mg__serch" href="#">Статус ремонта</a>
+    <h1 class="main__title">Услуги сервиса</h1>
+    <a class="main__help" href="#">Оставить заявку</a>
+    <a class="main__serch" href="#">Статус ремонта</a>
   </div>
   <ul class="main__services">
     
-    <li class="main__services__option"><a href="#" class="main__services__href">Ремонтируемые бренды</a></li>
-    <li class="main__services__option"><a href="#" class="main__services__href">Ремонтируемые устройства</a></li>
-    <li class="main__services__option"><a href="#" class="main__services__href">Цены на услуги</a></li>
-    <li class="main__services__option"><a href="#" class="main__services__href">Адреса сервисных центров</a></li>
-    <li class="main__services__option"><a href="#" class="main__services__href">Специальные цены</a></li>
-    <li class="main__services__option"><a href="#" class="main__services__href">Отзывы</a></li>
+    <li class="main__option"><a href="#" class="main__href">Ремонтируемые бренды</a></li>
+    <li class="main__option"><a href="#" class="main__href">Ремонтируемые устройства</a></li>
+    <li class="main__option"><a href="#" class="main__href">Цены на услуги</a></li>
+    <li class="main__option"><a href="#" class="main__href">Адреса сервисных центров</a></li>
+    <li class="main__option"><a href="#" class="main__href">Специальные цены</a></li>
+    <li class="main__option"><a href="#" class="main__href">Отзывы</a></li>
     
   </ul>
   <article class="content">
@@ -43,10 +42,10 @@
 Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.</p>
 <p>Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, что подтверждает большое количество постоянных клиентов.
 Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.</p></div>
-      <button class="content__more">Читать далее</button>
+      <button class="more">Читать далее</button>
     </section>
     <section>
-      <img src="img/illustration.png" class="content__illustration"> 
+      <img src="img/illustration.png" alt="иллюстрация" class="content__illustration"> 
     </section>
   </article>
 </main>
